1.1.0 2021xxxx
  BF: Service: Optimization of CONNECT
      Status 507 (Insufficient Storage) now only occurs when a new storage is
      to be created, but not when connecting to an existing one.
  BF: Service: Optimization of CORS
      Correction for a correct preflight OPTIONS response.
      Change to the full notation of the Access-Control headers.
      Omission of the automatic prefix.
  BF: Build: Correction of release
      Release file (zip) was not overwritten if already exists.
  BF: Service: Uniform use of the GMT time zone
      changes: Storage-Last-Modified / Storage-Expiration
  BF: Service: Correction in the creation of trace and trace hashes
  CR: Service: Added directives for XPath
      Directives are added at the end of the XPath separated by exclamation marks (!).
  CR: Service: Added the directive JSON
      This directive transforms the output to JSON.
  CR: Service GET/POST: Added support for accept header: application/json
      The header enforces the transformation of XML and text output as JSON.
      If the return value is not application/xslt+xml or text/plain, the header
      has no effect on the output. The client is informed via the Content-Type
      whether the transformation was used.
  CR: Test: Added Snake as proof of concept for a multiplayer game

1.0.0 20201220
  NT: Release is available