@@ -11,6 +11,8 @@
   BF: Service: Uniform use of the GMT time zone
       changes: Storage-Last-Modified / Storage-Expiration
   BF: Service: Correction in the creation of trace and trace hashes
+  BF: Service: Correction of POST for use of status 422 by errors in the stylesheets instead of status 400
+      Concerns the declaration from the output
   CR: Service: Added directives for XPath
       Directives are added at the end of the XPath separated by exclamation marks (!).
   CR: Service: Added the directive JSON
